commitafter ading more components

--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,14 @@
 
  .App{
+  
    text-align: center;
   
  }
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
+ 
   .App-header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
   }
@@ -28,26 +16,35 @@
   .App-link {
     color: #61dafb;
   }
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  .header{
+   .header{
     margin-top:5vh;
     height:10vh;
     background-color:darkgray;
     width:30vw;
     margin-left:20vw;
-
-   
-  }
+ }
   .headerp{
     padding-top:3vh;
     font-family:monospace;
     font-size:150%;
+  }
+  .navbarcontainer{
+    display:flex;
+    width:100%;
+    height:10vh;
+    background-color:midnightblue;
+    justify-content:end;
+    align-items: center;
+   
+    cursor:pointer;
+  }
+  .li{
+    background-color:cornsilk;
+    width:7vw;
+    margin-left:2vw;
+    height:3vh;
+    margin-right: 3vw;;
+  }
+  .nologedinuser{
+    display:none;
   }
