--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -22,16 +22,13 @@ height:4vh;
     margin-top:1vh;
 }
 .signuplower{
-    width:40vw;
-    height:80vh;
-    background-color:blanchedalmond;
-    margin-left:20vw;
-    margin-top:20vh;
+   
+   
   
 }
 .upper{
     padding-top:5vh;
-    margin-top:20vh;
+   
   
 }
 .p2{
@@ -90,5 +87,14 @@ height:4vh;
     color:red;
 }
 .signup{
-  
+  margin-left:30vw;
+  margin-top:7vh;
+ 
+}
+.allsignup{
+    width:40vw;
+    height:70vh;
+    background-color:blanchedalmond;
+ 
+
 }
