--- a/src/components/allFaults.css
+++ b/src/components/allFaults.css
@@ -1,15 +1,7 @@
 .retal{
-    margin-top:20px;
+    margin-top:5vh;
 }
-.allFault{
-    margin-left:200px;
-    margin-top:20px;
-    border-style: none;
-    border-radius:10px;
-    background-color:darkcyan;
-    height:35px;
-    width:200px;
-}
+
 .nofault{
     margin-left:40vw;
 }
