--- a/src/components/add.css
+++ b/src/components/add.css
@@ -29,10 +29,11 @@
     height:4vh;
 }
 .flinp{
-    padding-left:30vw;   width:15vw;
+    padding-left:1vw;   
+    width:35vw;
     height:10vh;
     border-radius: 5px;
-   
+  
 }
 
 .abtn{
