--- a/src/components/add.css
+++ b/src/components/add.css
@@ -33,7 +33,7 @@
     width:35vw;
     height:10vh;
     border-radius: 5px;
-  
+   
 }
 
 .abtn{
@@ -60,4 +60,23 @@
   padding:2vh;
     margin-top:5vh;
     font-weight:bold;
+    }
+    .solution{
+      width:36vw;
+    }
+    .replaceditems{
+      display:flex;
+      justify-content: start;
+     
+    }
+    .replacedpartname{
+      width:20vw;
+      height:3vh;
+    }
+    .replacedpartnumber{
+      width:20vw;
+      height:3vh;
+    }
+    .noshowpart{
+      display:none;
     }
