--- a/src/components/default.css
+++ b/src/components/default.css
@@ -7,6 +7,7 @@
    height:4vh;
    text-align:center;
    border-style: inset;
+   font-size: calc(0.3rem + 1vw);
  }
  .side:hover{
    background-color:antiquewhite;
