--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -21,11 +21,7 @@ height:4vh;
 .userdiv{
     margin-top:1vh;
 }
-.signuplower{
-   
-   
-  
-}
+
 .upper{
     padding-top:5vh;
    
@@ -93,9 +89,19 @@ height:4vh;
  
 }
 .allsignup{
-    width:40vw;
+    width:45vw;
+   height:50vh;
+ 
+}
+
+.signuplower{
     height:70vh;
     background-color:blanchedalmond;
+}
+@media( max-width:800px){
+    .allsignup{
+    width:60vw;
+   
  
-
+}
 }
