--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@
   }
 
   .item{
+   
   justify-content:flex-start; 
   align-items: center;
   border-radius:5px;
@@ -70,12 +71,11 @@
 
 .helpdropdown{
     display:flex;
-    width:9vw;
+    width:8vw;
     position:absolute;
     top:55px;
-    left:90vw;
+    left:91vw;
     height:40vh;
-    margin-right:10vw;
     color: white;
     font-size:small;
     background-color:midnightblue;
@@ -97,11 +97,10 @@
     height:4vh;
     width:6vw;
     color: white;
- 
   }
-  
   .uppernavcontainer{
     display:flex;
+    margin-right:2vw;
     
   }
   
@@ -110,12 +109,17 @@
     display:flex;
     align-items:center;
     justify-content:center;
+   
+  
   }
   .downcaret{
     size:medium;
     color:white;
     margin-right:5px;
     margin-top:8px;
+  }
+  .helplist li{
+    color:white;
   }
   @media (min-width:900px){
     .item:hover{
@@ -129,11 +133,10 @@
        
       }
     }
+  
   @media (max-width:800px) {
     .uppernavcontainer{
-     display:flex;
-     flex-direction:column;
-     align-items:start;
+     align-items:center;
      margin-top:1vh;
     }
     .showuser{
@@ -141,27 +144,34 @@
     }
     .navbarcontainer{
       height:20vw;
-      align-items:start;
-      justify-content:start;
+      align-items:center;
+      justify-content:center;
       
     }
+
   .item{
     height:4vh;
+    width:15vw;
+    margin-left:15px;
   }
   .helpdropdown{
-    top:20px;
-    left:25vw;
-    width:15vw;
-  
+    top:9vh;
+    left:75vw;
+    width:20vw;
+    height:25vh;
+    align-items:start;
+   justify-content:space-evenly;
+   
     }
-    .helplist{
-      height:1vh;
-      width:4vw;
-    
-    color:red;
-    
+  .helplist{
+        height:0.1vh;
+        width:2vw;
+       color:red;
+       font-size:small;
+      margin-left:4vw;
+     
     }
     .li{
-      font-size:small;
+      font-size:medium;
     }
   }
