--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,16 +1,35 @@
 
 
 .home{
-  margin-left:30vw;
-  margin-top:5px;
-  width:40vw;
-  height:85vh;
+  height:90vh;
   display:flex;
   flex-direction: column;
   justify-content:center;
   align-items:center;
      
   }
+  .uperhome{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width:35vw;
+    height:85vh;
+    background-color:beige;
+    height:70vh;
+    margin-top:1vh;
+   
+  }
+  .lowerhome{
+    background-color:beige;
+    height:7vh;
+    margin-top:1vh;
+    width:35vw;
+    display:flex;
+    align-items:end;
+    justify-content:center;
+
+  
+}
   .username{
      padding-top:5vh;
   }
@@ -36,13 +55,18 @@
       border-style:hidden;
   }
  #googlebtn{
-    width:1ovw;
+   
      height:8vh;
+    
   }
   .btngoogle{
+      display:flex;
+      justify-content:center;
       margin-left:8vw;
       margin-top:4vh;
      
+    margin-left:3vw;
+    width:4vw;
   }
   .manualbtndiv{
        margin-top:3vh;
@@ -59,31 +83,27 @@
       padding-top:3vh;
   }
   
-  .uperhome{
-      background-color:beige;
-      height:70vh;
-   
-  }
-  .lowerhome{
-      background-color:beige;
-      height:7vh;
-      margin-top:2vh;
-    
-  }
+  
+  
   .plower{
       padding-top:1.6vh;
       font-size:small;
   }
   @media (max-width:800px) {
     .uperhome{
-        background-color:blue;
+       
          margin-top:0px;
          height:70vh;
+         width:55vw;
     }
-    .home{
-         width:60vw;
-        
-       
-           
-        }
+   .lowerhome{
+width:55vw;
+margin-top:1vh;
+   }
+   .passinp{
+       width:50vw;
+   }
+   .userinp{
+       width:50vw;
+   }
       }
