--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -1,32 +1,47 @@
+.signup{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content:start;
+    margin-top:5vh;
+    width:100vw;
+    height:90vh; 
+   }
+   .allsignup{
+       display:flex;
+       flex-direction:column;
+       justify-content:start;
+       align-items:center;
+        width:35vw;
+        height:75vh;
+        background-color:blanchedalmond;
+ 
+}
 .name{
-    padding-top:10vh;
-    
+padding-top:6vh;
 }
 .inpname{
-width:15vw;
+width:13vw;
 height:4vh;
 }
 .inplastname{
-width:15vw;
+width:13vw;
 height:4vh;
 }
 .user2{
- width:31vw;
+ width:27vw;
  height:4vh;
 }
 .pass2{
-width:31vw;
+width:27vw;
 height:4vh;
 }
 .userdiv{
     margin-top:1vh;
 }
-
 .upper{
-    padding-top:5vh;
-   
-  
-}
+    padding-top:3vh;
+   }
 .p2{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:small;
@@ -52,27 +67,27 @@ font-weight: bold;
     margin-top:1vh;
 }
 .email{
- width:31vw;
+ width:27vw;
  height:4vh;
 }
 .noname{
     border-color: red;
-    width:15vw;
-height:4vh;
+    width:13vw;
+    height:4vh;
       }
 .nolastname{
         border-color: red;
-        width:15vw;
+        width:13vw;
        height:4vh;
       }
 .noemail{
 border-color: red;
-width:31vw;
+width:27vw;
 height:4vh;
       }
 .nopassword{
         border-color: red;
-        width:31vw;
+        width:27vw;
         height:4vh;
       }
 .noauth{
@@ -82,26 +97,50 @@ height:4vh;
     font-size:small;
     color:red;
 }
-.signup{
-  margin-left:30vw;
-  margin-top:7vh;
 
- 
-}
-.allsignup{
-    width:45vw;
-   height:50vh;
- 
-}
 
-.signuplower{
-    height:70vh;
-    background-color:blanchedalmond;
-}
+
 @media( max-width:800px){
     .allsignup{
     width:60vw;
+    height:60vh;
+   }
+   .inpname{
+    width:19vw;
    
- 
+    }
+    .inplastname{
+    width:19vw;
+    
+    }
+    .noname{
+       
+        width:19vw;
+       
+          }
+    .nolastname{
+          
+            width:19vw;
+         
+          }
+          .email{
+            width:40vw;
+          
+           }
+           .noemail{
+          
+            width:40vw;
+           
+                  }
+.user2{
+width:40vw;
 }
+.pass2{
+    width:40vw;
+   
+    }
+.nopassword{
+width:40vw;
+
+      }    
 }
