commit after more media query

--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,12 @@
    
   
   }
+  .signout{
+   }
+   
+  .showsignout{
+    display:none;
+  }
   .downcaret{
     size:medium;
     color:white;
