--- a/src/components/front.css
+++ b/src/components/front.css
@@ -1,6 +1,19 @@
+
+.front{
+    width:100vw;
+    height:90vh;
+
+}
 .uppercontainer {
     margin-top:10vh;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
 }
+.footercontainer{
+    
+}
+    
 .footer{
     display:flex;
     justify-content: space-evenly;
@@ -37,12 +50,4 @@ margin-left:20vw;
 .box:hover{
     transform:scale(1)
 
-}
-.front{
-
-width:100vw;
-height:90vh;
-display:flex;
-flex-direction:column;
-justify-content:space-between;
 }
