--- a/src/components/add.css
+++ b/src/components/add.css
@@ -49,8 +49,10 @@ margin-left:5vw;
     resize: none;
     border-style: none;
    }
-   .shortfault{
+   .shorttfault{
      margin-top:1vh;
+    
+
    }
 .abtn{
     margin-right:35vw;
