--- a/src/components/front.css
+++ b/src/components/front.css
@@ -2,18 +2,44 @@
 .front{
     width:100vw;
     height:90vh;
-
-}
-.uppercontainer {
-    margin-top:10vh;
+  }
+.allfront{
     display:flex;
     flex-direction:column;
-    justify-content:space-between;
+    align-items:center;
+    justify-content: end;
+    background-color:blueviolet;
+    height:90vh;
 }
-.footercontainer{
-    
+
+.upperfrontcontainer{
+    display: flex;
+    flex-direction: column;
+   align-items: start;
+   width:100vw;
+   height:95vh;
+   justify-content:start;
+ 
+
 }
-    
+.frontnav{
+    display: flex;
+    align-items:center;
+    justify-content:start;
+    width:100vw;
+    height:10vh;
+    background-color:darkgrey;
+    border-radius: 5px;
+   transition: all .9s ;
+   
+ 
+
+}
+.navarticle{
+    font-size:larger;
+    font-style:italic;
+    margin-left:25vw;
+}
 .footer{
     display:flex;
     justify-content: space-evenly;
@@ -21,7 +47,11 @@
     background-color:midnightblue;
     align-items: center;
     color:white;
-
+    width:100vw;
+}
+.bodyfront {
+    margin-top:10vh;
+    display:flex;
 }
 .bodycontainer{
 display:flex;
@@ -32,22 +62,91 @@ margin-left:20vw;
 .lowercontainer{
     display:flex;
     justify-content: start;
-    margin-left:20vw;
+   
 }
 .box{
     
-    width:20vh;
-    height:20vh;
-    border-style:none;
+    width:25vw;
+    height:10vh;
     border-color:white;
     background-color:darkgrey;
     border-radius: 5px;
-    margin-top:1.8px;
-    margin-left:5.8px;
+    margin-top:1vh;;
     transition: all .9s ;
+    align-content: center;
+    justify-content:center;
 
 }
 .box:hover{
-    transform:scale(1)
+    transform:scale(1.1)
 
 }
+.fabars{
+    transform: rotate(90deg);
+    transition-duration: 0.8s;
+    margin-left:13vw;
+    width:2vw;
+    display:none;
+}
+.nofabars{
+    margin-left:13vw;
+    transition-duration: 0.8s;
+    width:2vw;
+    display:none;
+}
+.sidenav{
+    display: flex;
+    flex-direction: column;
+   align-items: start;
+    background-color:greenyellow;
+   justify-content:start;
+   height:60vh;
+   width:45vw;
+   display:none;
+}
+.nosidenav{
+display:none;
+}
+
+@media (max-width:800px) {
+   
+    .nosidenav{
+      display:none;
+     }
+     .sidenav{
+        display:none;
+     }
+
+     .fabars{
+        size:3vw;
+        width:4vw;
+        display:block;
+     }
+     .nofabars{
+        size:3vw;
+        width:4vw;
+        display:block;
+     }
+     .foricondiv:first-child{
+        size:30vw;
+       
+     }
+     .sidenav{
+         display:flex;
+        flex-direction: column;
+      align-items:center;
+        justify-content:space-evenly;
+     }
+ 
+     .nosidenav{
+    display: none;
+    }
+    .list{
+        width:20vw;
+       
+    }
+    .list:hover{
+        border-bottom-style:solid;
+        border-bottom-color:black;
+    }
+  }
