--- a/src/components/singleplane.css
+++ b/src/components/singleplane.css
@@ -7,17 +7,18 @@
     display:flex;
     flex-direction:column;
     align-items:center;
-    background-color:aqua;
+    background-color:white;
     justify-content:start;
-    margin-top:2vh;
+    height:90vh;
+  
   
 }
 .formcontainer{
     display:flex;
    justify-content:center;
-  background-color:yellow;
+ 
    width:75vw;
-   margin-top:1vh;
+   margin-top:3vh;
 }
 
 
@@ -36,10 +37,38 @@
     margin-right:2vw;
 }
 .detailcontent{
+    display:flex;
+    flex-direction:column;
+    justify-content:start;
+    align-items: start;
     background-color:whitesmoke;
     height:80vh;
     width:85vw;
     margin-top:5vh;
 }
+.upperbutton{
+    margin-top:1vh;
+    height:4vh;
+    width:7vw;
+    background-color:darkblue;
+}
+.alldetaildiv{
+    display:flex;
+    justify-content:start;
+    margin-left:3vw;
+    background-color:yellow;
+    margin-top:2vh;
+    width:80vw;
+
+}
+.alldetaildiv{
+    word-wrap: break-word;
+}
+.tailnumberdiv{
+    margin-left:3vw;
+    margin-top:2vh;
+}
+
+
 
 
