--- a/src/components/singleplane.css
+++ b/src/components/singleplane.css
@@ -50,7 +50,7 @@
     margin-top:1vh;
     height:4vh;
     width:7vw;
-    background-color:darkblue;
+    background-color:antiquewhite;
 }
 .alldetaildiv{
     display:flex;
