--- a/src/components/delete.css
+++ b/src/components/delete.css
@@ -3,11 +3,11 @@
     height:3vh;
     
 }
-.btn1{
-
- 
-
-}
-.delete{
+@media (max-width:800px) {
+    .btn{
+        width:10vw;
+        height:2.5vh;
+        font-size:smaller;
+    }
 
 }
